--- a/index.html
+++ b/index.html
@@ -2,10 +2,31 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Просмотр изображения из S3</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Моя Pinterest-галерея</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h1>Изображение из S3 Bucket</h1>
-<img src="./R1-00671-0024.JPG" alt="Изображение из S3">
+<div class="gallery">
+    <!-- 12 картинок -->
+    <img class="gallery-item" src="images/R1-00671-0016.JPG" alt="Image 1">
+    <img class="gallery-item" src="images/R1-00671-0017.JPG" alt="Image 2">
+    <img class="gallery-item" src="images/R1-00671-0018.JPG" alt="Image 3">
+    <img class="gallery-item vert" src="images/R1-00671-0019.JPG" alt="Image 4">
+    <img class="gallery-item vert" src="images/R1-00671-0020.JPG" alt="Image 5">
+    <img class="gallery-item" src="images/R1-00671-0025.JPG" alt="Image 1">
+    <img class="gallery-item" src="images/R1-00671-0026.JPG" alt="Image 2">
+    <img class="gallery-item" src="images/R1-00671-0027.JPG" alt="Image 3">
+    <img class="gallery-item" src="images/R1-00671-0028.JPG" alt="Image 4">
+    <img class="gallery-item" src="images/R1-00671-0029.JPG" alt="Image 5">
+    <img class="gallery-item vert" src="images/R1-00671-0030.JPG" alt="Image 6">
+    <img class="gallery-item vert" src="images/R1-00671-0031.JPG" alt="Image 7">
+    <img class="gallery-item vert" src="images/R1-00671-0032.JPG" alt="Image 8">
+    <img class="gallery-item vert" src="images/R1-00671-0033.JPG" alt="Image 9">
+    <img class="gallery-item" src="images/R1-00671-0035.JPG" alt="Image 11">
+
+</div>
+<script src="script.js"></script>
+
 </body>
 </html>
